--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,10 +10,11 @@
     <!-- BOOTSTRAP ICONS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
+
 <body>
-    <nav id="navdar">
+    <nav id="navbar">
         <a href="/" id="logo">
-        <img src="/img/toughts_logo.png" alt="Toughts">
+            <img src="/img/toughts_logo.png" alt="Toughts">
         </a>
         <ul>
             <li><a href="/">Pensamentos</a></li>
@@ -23,10 +25,11 @@
     </nav>
     <div class="container">
         <!-- Mensagens -->
-        {{body}}
+        {{{body}}}
     </div>
     <footer>
-        <p><span>Toughts</span> &copy; </p>
+        <p><span>Toughts</span> &copy; 2023</p>
     </footer>
 </body>
+
 </html>
