--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,12 +19,23 @@
         <ul>
             <li><a href="/">Pensamentos</a></li>
             <!-- URLs após autenticação -->
+            {{#if session.userid}}
+            <li><a href="/tougths/dashboard">Deashboard</a></li>
+            <li><a href="/logout">Sair</a></li>
+            {{else}}
             <li><a href="/login">Entrar</a></li>
             <li><a href="/register">Registrar</a></li>
+            {{/if}}
         </ul>
     </nav>
     <div class="container">
         <!-- Mensagens -->
+        {{#if messages.message}}
+        <div class="message">
+            {{messages.message}}
+        </div>
+        {{/if}}
+
         {{{body}}}
     </div>
     <footer>
