--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -246,6 +246,7 @@
   }
   
   .order-container button:hover,
+  .order-container i:hover,
   .order-container a:hover {
     color: #f6982d;
   }
@@ -253,12 +254,14 @@
   .order-container span,
   .order-container button,
   .order-container a {
-    margin: 0 10px;
+    margin: 0 7px;
   }
-  
+
+  /*
   .order-container i {
     color: #f6982d;
   }
+  */
   
   .toughts-container figure {
     border-bottom: 1px solid #333;
